# n_dit

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
assets/: base.bam.txt  test.charmi  test.charmia
assets/audio/: sources.txt
assets/cq_term/: fx.charmia
assets/demo/: demo.scn.ron
assets/dialogue/: demo.yarn  nf.yarnproject
assets/dialogue/nf/: cellular_automata.yarn  initial.yarn  lucky_monkey.yarn  nf.ysls.json  pharmhaus.yarn  shops.yarn  warez.yarn
assets/nightfall/: .bam.txt  action_dictionary.json  curio_term_display.reg.toml  demo_map.charmi.toml  demo_map_node.charmi.toml  enemies.actions.json  enemies.cards.json  lvl1.cards.json  lvl1.nodes.json  lvl2.cards.json  lvl3.cards.json  lvl4.cards.json  net_map.charmi.toml  nightfall_enemies.cards.json  nightfall_enemies.curios.json  node_glyphs.reg.toml  node_scenes.reg.toml  node_sprites.reg.toml  nodes.charmia.toml  program.actions.json  program_short_names.reg.toml  test.nodes.json
assets/nightfall/nodes/: node1.scn.ron  node2.scn.ron  tutorial.scn.ron
assets/testing/: test.actions.json  test.cards.json  test.nodes.json
charmi/: Cargo.toml
charmi/src/: charmi_cell.rs  charmie_actor.rs  charmie_def.rs  fixed.rs  flexible.rs  lib.rs  loader.rs  main.rs  sized.rs
charmi/tests/data/: test.charmi
charmi_bevy/: Cargo.toml
charmi_bevy/src/: lib.rs
charmi_macros/: Cargo.toml
charmi_macros/src/: lib.rs
charmi_macros/tests/: tests.rs
cq_term/: Cargo.toml
cq_term/src/: animation.rs  base_ui.rs  board_ui.rs  configuration.rs  demo.rs  dialog_ui.rs  dialogue_ui.rs  fx.rs  input_event.rs  key_map.rs  layout.rs  lib.rs  linkage.rs  main_ui.rs  map_ui.rs  nf.rs  node_ui.rs  render.rs
cq_term/src/base_ui/: context_menu.rs  input_actions.rs  popup.rs  select_menu.rs
cq_term/src/board_ui/: sidebar.rs
cq_term/src/linkage/: base_ui_game_core.rs
cq_term/src/main_ui/: card_ui.rs  hud.rs  main_ui_op.rs  shop_ui.rs  ui_op.rs
cq_term/src/node_ui/: attack_animation.rs  button_ui.rs  grid_animation.rs  grid_ui.rs  inputs.rs  menu_ui.rs  messagebar_ui.rs  node_context_actions.rs  node_glyph.rs  node_popups.rs  node_ui_op.rs  registry.rs  setup.rs  titlebar_ui.rs
cq_term/src/node_ui/grid_ui/: available_moves.rs  borders.rs  calculate_ui_components.rs  grid_animation.rs  grid_inputs.rs  grid_tooltip.rs  range_of_action.rs  render_grid.rs  render_square.rs  scroll.rs
cq_term/src/node_ui/menu_ui/: actions.rs  card_selection.rs  description.rs  label.rs  simple_submenu.rs  stats.rs
dev/: pre-commit
game_core/: Cargo.toml
game_core/src/: assets.rs  bam.rs  board.rs  card.rs  common.rs  configuration.rs  dialog.rs  dialogue.rs  entity_grid.rs  entity_map.rs  error.rs  event.rs  game_master.rs  grid_map.rs  item.rs  lib.rs  loader.rs  map.rs  messaging.rs  metadata.rs  network.rs  node.rs  op.rs  opv2.rs  player.rs  prelude.rs  quest.rs  registry.rs  saving.rs  saving2.rs  shop.rs
game_core/src/ai/: simple_ai.rs
game_core/src/assets/: action_definition.rs  card_definition.rs  node_definition.rs
game_core/src/card/: card_action.rs  card_as_asset.rs
game_core/src/common/: daddy.rs  grid_map.rs  metadata.rs  sord.rs  world_query.rs
game_core/src/entity_grid/: commands.rs
game_core/src/game_master/: game_command.rs  informant.rs
game_core/src/loader/: node_definition.rs  sprite_definition.rs
game_core/src/model/: animation.rs  curio.rs  curio_action.rs  game_state.rs  inventory.rs  model_keys.rs  node.rs
game_core/src/model/curio/: curio_builder.rs
game_core/src/model/curio_action/: standard_curio_actions.rs
game_core/src/model/game_state/: game_change.rs
game_core/src/model/node/: node_change.rs  with_curio.rs
game_core/src/node/: ai.rs  node_act.rs  node_action.rs  node_loading.rs  node_op.rs  rule.rs
game_core/src/node/node_op/: node_op_undo.rs  node_opv2.rs
game_core/src/op/: executor.rs
game_core/src/opv2/: executor.rs
old/: Cargo.toml
old/old_game_core/: Cargo.toml
old/old_game_core/src/: ai.rs  assets.rs  common.rs  error.rs  event.rs  game_master.rs  lib.rs  model.rs  network.rs
old/old_ui/: Cargo.toml
old/old_ui/src/: main.rs
old/old_ui/ui/: render.rs  user_input.rs
old_game_core/: Cargo.toml
old_game_core/src/: abstractions.rs  assets.rs  common.rs  error.rs  loader.rs  metadata.rs
old_game_core/src/ai/: simple_ai.rs
old_game_core/src/assets/: card_definition.rs
old_game_core/src/common/: grid_map.rs
old_game_core/src/game_master/: game_command.rs  informant.rs
old_game_core/src/model/: animation.rs  curio.rs  curio_action.rs  inventory.rs  model_keys.rs  node.rs  world_map.rs
old_game_core/src/model/curio/: curio_builder.rs
old_game_core/src/model/game_state/: game_change.rs
old_game_core/src/model/node/: with_curio.rs
src/: bevy_n.rs  charmie.rs  charmie_ui.rs  common.rs  configuration.rs  demo.rs  game.rs  grid_map.rs  lib.rs  main.rs  term.rs  ui.rs
src/bevy_n/: demo.rs  game_core.rs  term.rs
src/bevy_n/game_core/: card.rs  grid_map.rs  node.rs
src/bevy_n/term/: render.rs
src/charmie/: charmie_actor.rs  charmie_def.rs  loader.rs
src/charmie_ui/: dynamic_layout.rs  n_dit_views.rs
src/game/: abstractions.rs  ai.rs  animation.rs  common.rs  error.rs  event.rs  game_master.rs  game_state.rs  inventory.rs  metadata.rs  model.rs  node.rs  sprite.rs  sprite_action.rs  world_map.rs
src/game/ai/: pathfinding.rs  simple_ai.rs
src/game/game_master/: game_command.rs
src/game/game_state/: game_change.rs  game_event.rs
src/game/model/: animation.rs  curio.rs  curio_action.rs  game_state.rs  inventory.rs  model_keys.rs  node.rs  sprite.rs  sprite_action.rs
src/game/node/: node_change.rs  node_event.rs  with_sprite.rs
src/game/sprite/: sprite_builder.rs
src/game/sprite_action/: standard_sprite_actions.rs
src/old_ui/: charmie_ui.rs
src/old_ui/charmie_ui/: dynamic_layout.rs  (+1 more)
src/term/: configuration.rs  fx.rs  input_event.rs  key_map.rs  layout.rs  node.rs  node_ui.rs  render.rs
src/ui/: click.rs  configuration.rs  layout.rs  node_ui.rs  render.rs  super_state.rs  tui.rs  user_input.rs
(+57 files in other folders)
