[workspace]
members = [
    "charmi",
    "game_core",
    "cq_term"
]

[package]
name = "n_dit"
version = "0.1.0"
authors = ["Testare <testare.i9z@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_core = { path = "game_core" }
cq_term = { path = "cq_term" }
tracing = { version = "*", features = ["log"] }
simplelog = "^0.10.0"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "file_watcher",
    "bevy_scene",
    "bevy_audio",
    "animation"
]

[dev-dependencies]
test-log = "0.2.12"
env_logger = "*"

# Use for "cargo flamegraph"
# [profile.release]
# debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
