[workspace]
members = [
    "charmi",
    "game_core",
    "cq_term"
]

[workspace.dependencies]
bevy_query_ext = "0.2"

[patch.crates-io.bevy]
git="https://github.com/Testare/bevy"
branch="load_untyped"

[workspace.dependencies.bevy]
# git="https://github.com/Testare/bevy"
# branch="load_untyped"
version = "0.12"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "file_watcher",
    "multi-threaded"
]

[package]
name = "n_dit"
version = "0.1.0"
authors = ["Testare <testare.i9z@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_core = { path = "game_core" }
cq_term = { path = "cq_term" }
tracing = { version = "*", features = ["log"] }
simplelog = "^0.10.0"
bevy.workspace = true


[dev-dependencies]
test-log = "0.2.12"
env_logger = "*"

# Use for "cargo flamegraph"
# [profile.release]
# debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
