[workspace]
members = [
    "charmi",
    "game_core",
    "cq_term"
]

[patch.crates-io]
simplelog = { git = "https://github.com/aminya/simplelog.rs.git", branch="patch-1" }

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
bevy_query_ext = "0.3"
bevy_yarnspinner = "0.2"

[workspace.dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "file_watcher",
    "multi-threaded"
]

[workspace.package]
version = "0.1.0"
authors = ["Testare <testare.i9z@gmail.com>"]
repository = "https://github.com/Testare/n_dit_secret"
rust-version = "1.74"
edition = "2021"

[package]
name = "n_dit"
description = """
A personal TUI game project inspired by Lego Spybotics: The Nightfall Incident
and using the Bevy game engine."""
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Use for "cargo flamegraph"
# [profile.release]
# debug = true

[dependencies]
bevy.workspace = true
clap = { version = "4.4.11", features = ["derive"] }
cq_term = { path = "cq_term" }
game_core = { path = "game_core" }
simplelog = "^0.12.0"
tracing = { version = "*", features = ["log"] }


[dev-dependencies]
test-log = "0.2.12"
env_logger = "*"
