[package]
name = "charmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.7.6"
unicode-width = "0.1.8"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "bevy_asset",
]

[dev-dependencies]
test-log = "0.2.12"
env_logger = "*"