[package]
name = "charmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.20.0"
itertools = "0.10.1"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.8.2"
unicode-width = "0.1.8"
thiserror = "1.0"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
]

[dev-dependencies]
env_logger = "*"
test-log = "0.2.12"
