[package]
name = "charmi"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dev-dependencies]
env_logger = "*"
test-log = "0.2.12"

[dependencies]
crossterm = "0.20.0"
freeform.workspace = true
itertools = "0.10.1"
log = "0.4"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
toml = "0.8.2"
unicode-width = "0.1.8"

[dependencies.bevy]
workspace = true
default-features = false
features = ["bevy_asset"]

