[package]
name = "charmi_macros"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
charmi = { path = "../charmi" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"
