[package]
name = "cq_term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charmi = { path = "../charmi" }
game_core = { path = "../game_core" }

pad =  { git = "https://github.com/Testare/rust-pad" }

crossterm = { version = "0.20.0", features = ["event-stream"] }
getset = "0.1.1"
itertools = "0.10.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
simplelog = "^0.10.0"
taffy = { version = "0.3.16", features = ["serde"] }
textwrap = "0.16.0"
thiserror = "1.0"
unicode-width = "0.1.8"
bevy_query_ext = "0.1"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "bevy_asset",
    "filesystem_watcher",
    "bevy_scene",
    "bevy_audio",
    "wav",
]
