[package]
name = "cq_term"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = {workspace = true, features = ["wav"]}
bevy_query_ext = "0.2"
charmi = { path = "../charmi" }
crossterm = { version = "0.20.0", features = ["event-stream"] }
game_core = { path = "../game_core" }
getset = "0.1.1"
itertools = "0.10.1"
log = "0.4"
pad =  { git = "https://github.com/Testare/rust-pad" }
serde = "1.0"
serde_json = "1.0"
simplelog = "^0.10.0"
taffy = { version = "0.3.16", features = ["serde"] }
textwrap = "0.16.0"
thiserror = "1.0"
unicode-width = "0.1.8"
