[package]
name = "cq_term"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = {workspace = true, features = ["wav"]}
bevy_query_ext.workspace = true
bevy_yarnspinner.workspace = true
charmi = { path = "../charmi" }
crossterm = { version = "0.20.0", features = ["event-stream", "serde"] }
game_core = { path = "../game_core" }
getset = "0.1.1"
indoc = "2.0.4"
itertools = "0.10.1"
log = "0.4"
pad =  { git = "https://github.com/Testare/rust-pad" }
serde = "1.0"
serde_json = "1.0"
taffy = { version = "0.3.16", features = ["serde"] }
textwrap = "0.16.0"
thiserror = "1.0"
unicode-width = "0.1.8"
