[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typed_key = "0.1"
lazy_static = "1.4.0"
getset = "0.1.1"
log = "0.4"
bitvec = "1"
base64 = "0.13"
old_game_core = { path = "../old_game_core/" }
thiserror = "1.0.40"
