[package]
name = "game_core"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.75" # Re-evaluate use of this library
base64 = "0.13"
bevy.workspace = true
bevy_query_ext.workspace = true
bevy_yarnspinner.workspace = true
bitvec = "1"
getset = "0.1.1"
homedir = "0.2.1"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0.44"
toml.workspace = true
typed_key = "0.1"
